--- a/README
+++ b/README
@@ -15,6 +15,6 @@
 
 If you want to use Offline Maps in your iOS application, this is an example on how you could do it. We use the route-me framework with a sqlite database of the map information.
 
-* See how to download the tiles. [[Download tiles]] tutorial
+* See how to download the tiles. https://github.com/InfiniteDroplets/iOS-OfflineMaps-Example/wiki/Download-tiles
 
-* See how to create a sqlite database of the tiles. [[Create-database-of-tiles]] tutorial
+* See how to create a sqlite database of the tiles. https://github.com/InfiniteDroplets/iOS-OfflineMaps-Example/wiki/Create-database-of-tiles
